# chess-archive

./: .replit  app.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1744111372855.txt
data/: chess_archive.db
data/players/12345678/: player_info.json
data/players/12345678/chess.com/2025/: 2025-04.pgn
data/players/12345678/lichess/2025/: 2025-04.pgn
data/players/87654321/: player_info.json
utils/: api_clients.py  data_processor.py  db_manager.py  file_manager.py  scheduler.py  visualizers.py
